# QMMP

./: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.rus  README  README.RUS  README.UKR  qmmp-plugin-pack.pri  qmmp-plugin-pack.pro  qmmp.pri  qmmp.pro  qmmp.spec
branches/qmmp-plugin-pack-1.1.1/src/Input/: CMakeLists.txt
branches/qmmp-plugin-pack-1.1/src/Input/ffap/: CMakeLists.txt  decoderffapfactory.cpp  decoderffapfactory.h
branches/qmmp-plugin-pack-1.2/src/General/history/: CMakeLists.txt  history.pro  historyfactory.cpp  historyfactory.h  historysettingsdialog.h  historywindow.cpp
branches/qmmp-plugin-pack-1.3/src/Input/: CMakeLists.txt
extras/package/ubuntu/qmmp-in-ffmpeg/: CMakeLists.txt
qmmp-plugin-pack/src/Input/ffap/: CMakeLists.txt  decoder_ffap.cpp  decoder_ffap.h  decoder_ffapcue.cpp  decoder_ffapcue.h  decoderffapfactory.cpp  decoderffapfactory.h  ffap.pro  ffapmetadatamodel.cpp  ffapmetadatamodel.h
src/Input/: CMakeLists.txt
src/Input/ffap/: CMakeLists.txt  cueparser.cpp  cueparser.h  decoder_ffap.cpp  decoder_ffapcue.cpp  decoder_ffapcue.h  decoderffapfactory.cpp  decoderffapfactory.h  ffap.c  ffap.pro  ffapmetadatamodel.cpp  ffapmetadatamodel.h  replaygainreader.cpp
src/Input/ffap/translations/: ffap_plugin_bg.ts  ffap_plugin_cs.ts  ffap_plugin_de.ts  ffap_plugin_el.ts  ffap_plugin_en.ts  ffap_plugin_es.ts  ffap_plugin_fi.ts  ffap_plugin_fr.ts  ffap_plugin_gl_ES.ts  ffap_plugin_he.ts  ffap_plugin_hu.ts  ffap_plugin_id.ts  ffap_plugin_it.ts  ffap_plugin_ja.ts  ffap_plugin_kk.ts  ffap_plugin_lt.ts  ffap_plugin_nl.ts  ffap_plugin_pl_PL.ts  ffap_plugin_pt.ts  ffap_plugin_pt_BR.ts  ffap_plugin_ru.ts  ffap_plugin_sk.ts  ffap_plugin_sr_BA.ts  ffap_plugin_sr_RS.ts  ffap_plugin_tr.ts  ffap_plugin_uk_UA.ts  ffap_plugin_zh_CN.ts  ffap_plugin_zh_TW.ts  translations.qrc
src/Input/mpg123/: CMakeLists.txt  decoder_mpg123.cpp  decoder_mpg123.h  decodermpg123factory.cpp  decodermpg123factory.h  mpegmetadatamodel.cpp  replaygainreader.cpp  settingsdialog.cpp  tagextractor.cpp
src/Input/mpg123/translations/: mpg123_plugin_bg.ts  mpg123_plugin_cs.ts  mpg123_plugin_de.ts  mpg123_plugin_el.ts  mpg123_plugin_en.ts  mpg123_plugin_es.ts  mpg123_plugin_fr.ts  mpg123_plugin_gl_ES.ts  mpg123_plugin_he.ts  mpg123_plugin_hu.ts  mpg123_plugin_it.ts  mpg123_plugin_ja.ts  mpg123_plugin_kk.ts  mpg123_plugin_lt.ts  mpg123_plugin_nl.ts  mpg123_plugin_pl_PL.ts  mpg123_plugin_pt.ts  mpg123_plugin_pt_BR.ts  mpg123_plugin_ru.ts  mpg123_plugin_sk.ts  mpg123_plugin_sr_BA.ts  mpg123_plugin_sr_RS.ts  mpg123_plugin_tr.ts  mpg123_plugin_uk_UA.ts  mpg123_plugin_zh_CN.ts  mpg123_plugin_zh_TW.ts  translations.qrc
src/Input/xmp/: CMakeLists.txt  decoder_xmp.cpp  decoder_xmp.h  decoderxmpfactory.cpp  decoderxmpfactory.h  xmpmetadatamodel.cpp  xmpmetadatamodel.h
src/Input/xmp/translations/: translations.qrc  xmp_plugin_bg.ts  xmp_plugin_cs.ts  xmp_plugin_de.ts  xmp_plugin_el.ts  xmp_plugin_en.ts  xmp_plugin_es.ts  xmp_plugin_fi.ts  xmp_plugin_fr.ts  xmp_plugin_gl_ES.ts  xmp_plugin_he.ts  xmp_plugin_hu.ts  xmp_plugin_id.ts  xmp_plugin_it.ts  xmp_plugin_ja.ts  xmp_plugin_kk.ts  xmp_plugin_lt.ts  xmp_plugin_nl.ts  xmp_plugin_pl_PL.ts  xmp_plugin_pt.ts  xmp_plugin_pt_BR.ts  xmp_plugin_ru.ts  xmp_plugin_sk.ts  xmp_plugin_sr_BA.ts  xmp_plugin_sr_RS.ts  xmp_plugin_tr.ts  xmp_plugin_uk_UA.ts  xmp_plugin_zh_CN.ts  xmp_plugin_zh_TW.ts
src/Transports/ytb/: CMakeLists.txt  bufferdevice.cpp  bufferdevice.h  ytbinputfactory.cpp  ytbinputsource.cpp  ytbinputsource.h
src/Transports/ytb/translations/: translations.qrc  ytb_plugin_bg.ts  ytb_plugin_cs.ts  ytb_plugin_en.ts  ytb_plugin_fr.ts  ytb_plugin_hu.ts  ytb_plugin_id.ts  ytb_plugin_ja.ts  ytb_plugin_kk.ts  ytb_plugin_pt.ts  ytb_plugin_ru.ts  ytb_plugin_sr_BA.ts  ytb_plugin_sr_RS.ts
src/Visual/goom/: CHANGES  CMakeLists.txt  convolve_fx.c  cpu_info.c  flying_stars_fx.c  goom.pro  goom_core.c  goom_graphic.h  goomwidget.cpp  goomwidget.h  visualgoomfactory.cpp  visualgoomfactory.h
src/Visual/goom/translations/: goom_plugin_bg.ts  goom_plugin_cs.ts  goom_plugin_de.ts  goom_plugin_el.ts  goom_plugin_fi.ts  goom_plugin_fr.ts  goom_plugin_gl_ES.ts  goom_plugin_he.ts  goom_plugin_hu.ts  goom_plugin_it.ts  goom_plugin_ja.ts  goom_plugin_kk.ts  goom_plugin_lt.ts  goom_plugin_nl.ts  goom_plugin_pl_PL.ts  goom_plugin_pt.ts  goom_plugin_pt_BR.ts  goom_plugin_ru.ts  goom_plugin_sk.ts  goom_plugin_sr_BA.ts  goom_plugin_sr_RS.ts  goom_plugin_tr.ts  goom_plugin_uk_UA.ts  goom_plugin_zh_CN.ts  goom_plugin_zh_TW.ts
src/app/: CMakeLists.txt  app.pro  builtincommandlineoption.cpp  main.cpp  qmmp-0.desktop  qmmp-dir-0.desktop  qmmp-enqueue-0.desktop  qmmp.desktop  qmmp.rc  qmmp_dir.desktop  qmmp_enqueue.desktop  qmmpstarter.cpp  qmmpstarter.h
src/app/desktop-translations/: qmmp_cs.desktop.in  qmmp_dir_cs.desktop.in  qmmp_dir_zh_CN.desktop.in  qmmp_enqueue_cs.desktop.in  qmmp_enqueue_uk_UA.desktop.in  qmmp_tr.desktop.in  qmmp_zh_CN.desktop.in
src/app/images/: images.qrc
src/app/translations/: qmmp_bg.ts  qmmp_cs.ts  qmmp_de.ts  qmmp_el.ts  qmmp_en.ts  qmmp_es.ts  qmmp_fr.ts  qmmp_gl_ES.ts  qmmp_he.ts  qmmp_hu.ts  qmmp_id.ts  qmmp_it.ts  qmmp_ja.ts  qmmp_kk.ts  qmmp_locales.qrc  qmmp_lt.ts  qmmp_nl.ts  qmmp_pl_PL.ts  qmmp_pt.ts  qmmp_pt_BR.ts  qmmp_ru.ts  qmmp_sk.ts  qmmp_sr_BA.ts  qmmp_sr_RS.ts  qmmp_tr.ts  qmmp_uk_UA.ts  qmmp_zh_CN.ts  qmmp_zh_TW.ts
src/plugins/Effect/monotostereo/: CMakeLists.txt  effectmonotostereofactory.cpp  effectmonotostereofactory.h
src/plugins/General/history/: CMakeLists.txt  historywindow.cpp  historywindow.h
trunk/qmmp-plugin-pack/: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.rus  README  README.RUS  qmmp-plugin-pack.pri  qmmp-plugin-pack.pro
trunk/qmmp-plugin-pack/src/: CMakeLists.txt  plugins.pri
trunk/qmmp-plugin-pack/src/Engines/ffvideo/: CMakeLists.txt  (+15 more)
trunk/qmmp-plugin-pack/src/General/: CMakeLists.txt  General.pro
trunk/qmmp-plugin-pack/src/Input/: CMakeLists.txt
trunk/qmmp-plugin-pack/src/Transports/: Transports.pro
trunk/qmmp-plugin-pack/src/Visual/: Visual.pro
trunk/qmmp-plugin-pack/utils/: update_ts.sh
(+8076 files in other folders)
